--- a/templates/person.html
+++ b/templates/person.html
@@ -4,24 +4,7 @@
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{.Name}}{{if (or .BirthDate .DeathDate)}} ({{if .BirthDate}}{{.BirthDate}}{{end}}-{{if .DeathDate}}{{.DeathDate}}{{end}}){{end}}</title>
-	<style>
-		*    { box-sizing: border-box }
-		html { font-family: Arial,sans-serif; line-height:1.15; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100% }
-		body { margin: 0; }
-		main { max-width: 980px; margin: auto; padding-top: 2em; }
-
-		table { border-collapse: collapse; width: 100%;}
-		th { text-align: left; font-size: smaller; border-bottom: 1px solid #000; background: #eee; text-transform: uppercase; padding-right: 1em;}
-		td { padding: 0.5em 1em 0.5em 0.2em; margin: 0; max-width: 20em; vertical-align: top;}
-
-		a:link,
-		a:visited { color: blue; }
-
-		.tag     { font-size: smaller; color: #777; text-transform: uppercase; background: #eee; border-radius: 3px; padding: 3px;}
-		.smaller { font-size: smaller;}
-		.grey    { color: #888; }
-		p.dense  { padding: 0; margin: 0 0 0.5em 0; }
-	</style>
+	<link href="/static/mormor.css" media="all" rel="stylesheet" />
 </head>
 <body>
 	<main>
@@ -221,5 +204,6 @@
 			<p style="font-size:smaller">Vis metadata som <a href="/{{.URI}}.rdf">RDF</a> | <a href="/{{.URI}}.svg">SVG</a> </p>
 		</div>
 	</main>
+<script src="/static/mormor.js" type="text/javascript"></script>
 </body>
 </html>
