--- a/static/mormor.css
+++ b/static/mormor.css
@@ -11,7 +11,7 @@ a:link,
 a:visited { color: blue; }
 a.no-blue-link { text-decoration: none; color: #000; }
 
-.tag     { font-size: smaller; color: #777; text-transform: uppercase; background: #eee; border-radius: 3px; padding: 3px;}
+.tag     { font-size: smaller; color: #777; text-transform: uppercase; background: #eee; border-radius: 3px; padding: 3px; margin-right: 1em;}
 .smaller { font-size: smaller;}
 .grey    { color: #888; }
 p.dense  { padding: 0; margin: 0 0 0.5em 0; }
